--- a/whatsapp-baileys-service/package.json
+++ b/whatsapp-baileys-service/package.json
@@ -20,6 +20,7 @@
     "@whiskeysockets/baileys": "^6.7.8",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pino": "^9.5.0",
     "qrcode": "^1.5.4",
