feat: configure frontend for AWS and deploy services to EC2
- Updated admin-frontend to use environment variables for API and WhatsApp service URLs.
- Created docker-compose.yml for production deployment on EC2.
- Restructured backend Dockerfile to fix import issues.
- Updated WhatsApp service to Node 20.
- Fixed .gitignore to allow src/lib and specific lib/ ignore.

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -8,17 +8,18 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copiar requirements
-COPY requirements.txt .
+COPY requirements.txt ./backend/
 
 # Instalar dependencias Python
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r ./backend/requirements.txt
 
 # Copiar código
-COPY . .
+COPY . ./backend/
 
 # Variables de entorno por defecto
 ENV PYTHONUNBUFFERED=1
 ENV AI_ASSISTANTS_DATA_DIR=/data
+ENV PYTHONPATH=/app
 
 # Crear directorio de datos
 RUN mkdir -p /data
@@ -31,4 +32,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD python -c "import httpx; httpx.get('http://localhost:8000/docs', timeout=5)" || exit 1
 
 # Comando de inicio
-CMD ["python", "run_server.py"]
+CMD ["python", "backend/run_server.py"]
