feat: Agregar modo autónomo LLM para bot de WhatsApp
- Crear prompt system para bot autónomo (autonomous_system.txt)
- Agregar módulo de configuración (autonomous_config.py)
- Implementar nodo autonomous en router graph
- Integrar modo autónomo en routing (bypassa dominios cuando está habilitado)
- Agregar tests para nodo autonomous
- Actualizar documentación en README.md
- Agregar variables de entorno en env.example

El modo autónomo permite que el bot responda directamente usando LLM
sin routing por dominios, usando historial de conversación para contexto.

--- a/apps/backend/examples/env.example
+++ b/apps/backend/examples/env.example
@@ -24,6 +24,10 @@ AI_ASSISTANTS_LLM_ROUTER_ENABLED=1
 AI_ASSISTANTS_LLM_NLG_ENABLED=0
 AI_ASSISTANTS_LLM_NLG_STRICT=1
 
+# --- Autonomous LLM mode (bypasses domain routing) ---
+AI_ASSISTANTS_AUTONOMOUS_ENABLED=0
+AI_ASSISTANTS_AUTONOMOUS_MAX_HISTORY=10
+
 # --- Vector memory embeddings (OpenAI-compatible /v1/embeddings) ---
 AI_ASSISTANTS_VECTOR_MEMORY_ENABLED=1
 # For OpenAI, embeddings use the same base_url and api_key by default (fallbacks).
