--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,17 @@ Thumbs.db
 *.sqlite3-shm
 *.sqlite3-wal
 
+
+# Data directories
+.data/
+**/.data/
+
+# Sensitive credentials
+docs/google_client_secret.json
+**/google_client_secret.json
+**/client_secret*.json
+**/oauth2_credentials*.json
+
+# Test files (temporary)
+test_*.py
+!tests/**/*.py
